Week-8/homepage/index.html finished

--- a/Week-8/homepage/index.html
+++ b/Week-8/homepage/index.html
@@ -71,9 +71,13 @@
                 <div class="col-md-4">
                     <img class="profile-pic img-fluid rounded-circle" src="https://avatars.githubusercontent.com/u/67757208?v=4" alt="Fabrício Esper">
                 </div>
-                <div class="col-md-8">
-                    <h2>Hi, I'm Fabrício</h2>
-                    <p>I'm currently studying Software Engineering at 42 Rio and System Development at IBMR.</p>
+                <div class="col-md-8 text-container">
+                    <h2>About Me</h2>
+                    <p>Hi, I'm Fabrício Esper, a passionate and dedicated software engineer born and raised in Rio de Janeiro, Brazil. I am currently studying Software Engineering at 42 Rio and Systems Analysis and Development at IBMR. With a strong foundation in web development, cloud services, and data governance, I have honed my skills through various projects and certifications.</p>
+                    <p>I am proficient in modern web technologies, including HTML, CSS, JavaScript, React, and Bootstrap. I also hold an AWS re/Start certification, which has equipped me with essential knowledge in cloud computing and AWS services. My academic journey and hands-on experience in software development have allowed me to participate in notable projects such as Born2beroot, Minishell, and Inception at 42 Rio, and develop a mobile app in Flutter for the Microsoft challenge at Campus Party (CPBR14).</p>
+                    <p>Beyond my technical expertise, I'm an avid fan of superhero comics. I draw inspiration from the creativity and storytelling in the Marvel and DC universes, and I enjoy discussing the latest comic book releases and adaptations in film and television.</p>
+                    <p>In my free time, I enjoy creating abstract images and developing games, such as my own project, Practice Pong. I am also constantly exploring new technologies and improving my skills to stay at the forefront of the ever-evolving tech industry.</p>
+                    <p>Feel free to explore my portfolio, check out my projects, and get in touch with me through the contact section. Let's connect and create something amazing together!</p>
                 </div>
             </div>
         </div>
