--- a/Week-8/homepage/education.html
+++ b/Week-8/homepage/education.html
@@ -19,7 +19,7 @@
          <meta name="viewport" content="width=device-width, initial-scale=1.0">
          <meta name="description" content="Portfolio of Fabrício Esper">
 
-        <title>Home - Fabrício Esper</title>
+        <title>Projects - Fabrício Esper</title>
         <script>
             document.addEventListener('DOMContentLoaded', (event) => {
                 const toggleButton = document.getElementById('dark-mode-toggle');
@@ -66,19 +66,36 @@
                 </div>
             </nav>
         </header>
-        <!-- Home page -->
-        <div class="container home-content text-center mt-5">
+        <!-- Education page -->
+        <div class="container mt-5">
+            <h2 class="mb-4">Education</h2>
             <div class="row">
-                <div class="col-md-4">
-                    <img class="profile-pic img-fluid rounded-circle" src="https://avatars.githubusercontent.com/u/67757208?v=4" alt="Fabrício Esper">
+                <div class="col-12 mb-4">
+                    <div class="card project-card">
+                        <div class="card-body d-flex flex-column">
+                            <h5 class="card-title">42 Rio</h5>
+                            <p class="card-text">Software Engineering</p>
+                            <p class="card-text card-date">2022 - Present</p>
+                        </div>
+                    </div>
                 </div>
-                <div class="col-md-8 text-container">
-                    <h2>About Me</h2>
-                    <p>Hi, I'm Fabrício Esper, a passionate and dedicated software engineer born and raised in Rio de Janeiro, Brazil. I am currently studying Software Engineering at 42 Rio and Systems Analysis and Development at IBMR. With a strong foundation in web development, cloud services, and data governance, I have honed my skills through various projects and certifications.</p>
-                    <p>I am proficient in modern web technologies, including HTML, CSS, JavaScript, React, and Bootstrap. I also hold an AWS re/Start certification, which has equipped me with essential knowledge in cloud computing and AWS services. My academic journey and hands-on experience in software development have allowed me to participate in notable projects such as Born2beroot, Minishell, and Inception at 42 Rio, and develop a mobile app in Flutter for the Microsoft challenge at Campus Party (CPBR14).</p>
-                    <p>Beyond my technical expertise, I'm an avid fan of superhero comics. I draw inspiration from the creativity and storytelling in the Marvel and DC universes, and I enjoy discussing the latest comic book releases and adaptations in film and television.</p>
-                    <p>In my free time, I enjoy creating abstract images and developing games, such as my own project, Practice Pong. I am also constantly exploring new technologies and improving my skills to stay at the forefront of the ever-evolving tech industry.</p>
-                    <p>Feel free to explore my portfolio, check out my projects, and get in touch with me through the contact section. Let's connect and create something amazing together!</p>
+                <div class="col-12 mb-4">
+                    <div class="card project-card">
+                        <div class="card-body d-flex flex-column">
+                            <h5 class="card-title">IBMR</h5>
+                            <p class="card-text">Analysis and System Development</p>
+                            <p class="card-text card-date">2022 - Present</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 mb-4">
+                    <div class="card project-card">
+                        <div class="card-body d-flex flex-column">
+                            <h5 class="card-title">Escola da Nuvem</h5>
+                            <p class="card-text">AWS re/Start Graduate</p>
+                            <p class="card-text card-date">2024</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
